# accessibility-app

./: .gitignore  AGENTS.md  README.md
doc/: hackathon-demo-design.md  local-ai-features-focus.md  local-ai-features.md  motor-assist-app-design.md  native-frame-memory-roadmap.md  native-vision-runtime.md
src/RyoikiTenkai/: Program.cs  RyoikiTenkai.csproj
src/RyoikiTenkai.Native/: CMakeLists.txt  CMakeSettings.json  vcpkg.json
src/RyoikiTenkai.Native/include/: ryoiki_native.h
src/RyoikiTenkai.Native/src/: camera_capture.cpp  camera_capture.h  ryoiki_native.cpp
src/RyoikiTenkai.Native/src/Buffers/: frame_buffer.cpp  frame_buffer.h  frame_pool.cpp  frame_pool.h  tensor_buffer.cpp  tensor_buffer.h
src/RyoikiTenkai.Native/src/Geometry/: geometry_types.cpp  geometry_types.h  hand_geometry_processor.cpp  hand_geometry_processor.h
src/RyoikiTenkai.Native/src/HandPerception/MediaPipeGraph/: hand_landmark_graph.cpp  hand_landmark_graph.h  hand_landmarks_to_roi.cpp  hand_landmarks_to_roi.h  hand_perception_graph.cpp  hand_perception_graph.h  palm_detection_graph.cpp  palm_detection_graph.h  palm_detection_postprocessor.cpp  palm_detection_postprocessor.h  palm_detection_to_roi.cpp  palm_detection_to_roi.h
src/RyoikiTenkai.Native/src/HandPerception/ModelRunners/: cpu_hand_landmark_runner.cpp  cpu_hand_landmark_runner.h  cpu_palm_detection_runner.cpp  cpu_palm_detection_runner.h  hand_landmark_model_contract.cpp  hand_landmark_model_contract.h  hand_landmark_runner.h  hand_model_runner.h  palm_detection_runner.cpp  palm_detection_runner.h
src/RyoikiTenkai.Native/src/Pipeline/: latest_frame_slot.cpp  latest_frame_slot.h  perception_mailbox.cpp  perception_mailbox.h
src/RyoikiTenkai.Native/src/Rendering/: d3d11_d2d_renderer.cpp  d3d11_d2d_renderer.h  frame_transforms.cpp  frame_transforms.h  latest_render_packet_slot.cpp  latest_render_packet_slot.h  native_render_stage.cpp  native_render_stage.h  render_packet.h
src/RyoikiTenkai.Native/src/Runtime/: camera_device_selection.cpp  camera_device_selection.h  frame_orientation.cpp  frame_orientation.h
src/RyoikiTenkai.Native/tests/: hand_perception_tests.cpp  vision_core_tests.cpp
src/RyoikiTenkai.Wpf/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  RyoikiTenkai.Wpf.csproj
src/RyoikiTenkai.Wpf/Native/: NativeVisionHost.cs  NativeVisionInterop.cs
src/RyoikiTenkai/Actions/: ActionExecutor.cs  KeyboardInput.cs
src/RyoikiTenkai/App/: RyoikiTenkaiApp.cs
src/RyoikiTenkai/Core/: ActionSpec.cs  GestureBinding.cs  GestureDispatcher.cs  GestureEvent.cs
src/RyoikiTenkai/GestureSources/: CameraGestureSource.cs  ConsoleGestureSource.cs  FakeVisionGestureSource.cs  IGestureSource.cs
src/RyoikiTenkai/Properties/: AssemblyInfo.cs
src/RyoikiTenkai/Storage/: BindingStore.cs
src/RyoikiTenkai/Vision/: CameraFrame.cs  CameraFrameResizer.cs  CameraFrameSource.cs  FrameBrightnessGestureModel.cs  FrameGesturePrediction.cs  HandLandmark.cs  HandLandmarkResult.cs  IFrameGestureModel.cs  IHandLandmarkModel.cs  MediaPipeHandsModel.cs  MediaPipeHandsModelOptions.cs  MediaPipeLandmarkGestureModel.cs  RealtimeCameraFrameSource.cs
src/RyoikiTenkai/models/: README.md
